--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,45 @@
+// {
+//   // Use IntelliSense to learn about possible attributes.
+//   // Hover to view descriptions of existing attributes.
+//   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+//   "version": "0.2.0",
+//   "configurations": [
+
+
+//     {
+//       "type": "pwa-chrome",
+//       "request": "launch",
+//       "name": "Launch Chrome against localhost",
+//       "url": "http://localhost:9000",
+//       "webRoot": "${workspaceRoot}/www",
+//     }
+//   ]
+// }
+
 {
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
+
     {
-      "type": "pwa-chrome",
+      "name": "Listen for XDebug",
+      "type": "php",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}"
+      "port": 9000,
+      "xdebugSettings": {
+        "max_data": -1
+      }
+    },
+    {
+      "name": "Launch currently open script",
+      "type": "php",
+      "request": "launch",
+      "program": "${file}",
+      "cwd": "${fileDirname}",
+      "port": 9000
     }
   ]
 }
